webbion/org-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: org-service-deployment
  namespace: default
  labels:
    app: org-service-deployment
spec:
  selector:
    matchLabels:
      app: org-service-deployment
  template:
    metadata:
      labels:
        app: org-service-deployment
    spec:
      containers:
        - name: org-service-deployment
          image: ghcr.io/gregmortenoliver/org-service:main
          ports:
            - containerPort: 3002
      imagePullSecrets:
        - name: secret-shhh
