webbion/user-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-deployment
  namespace: default
  labels:
    app: user-service-deployment
spec:
  selector:
    matchLabels:
      app: user-service-deployment
  template:
    metadata:
      labels:
        app: user-service-deployment
    spec:
      containers:
        - name: user-service-deployment
          image: ghcr.io/gregmortenoliver/users-service:main
          ports:
            - containerPort: 3001
      imagePullSecrets:
        - name: INSERT SHIT HERE
