webbion/service.yml
apiVersion: v1
kind: Service
metadata:
  name: webbion-service
spec:
  selector:
    app: webbion
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
