webbion/web-app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webbion-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    argocd.argoproj.io/sync-options: ServerSideApply=true
    external-dns.alpha.kubernetes.io/hostname: argo.tail732e1e.ts.net
    ingress.kubernetes.io/external-url: http://argo.tail732e1e.ts.net:30855
spec:
  ingressClassName: nginx
  rules:
    - host: argo.tail732e1e.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webbion-web-app-service
                port:
                  number: 80
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webbion-web-app-service
                port:
                  number: 80
